--- a/css/theme/source/myscript.scss
+++ b/css/theme/source/myscript.scss
@@ -63,6 +63,14 @@ section.has-dark-background {
 	box-shadow: none;
 }
 
+.reveal pre {
+	box-shadow: none;
+	font-size: 1.5rem;
+
+}
+.reveal pre code {
+	overflow: hidden;
+}
 .logo-container {
 	align-items: stretch;
 	display: flex;
@@ -75,7 +83,9 @@ section.has-dark-background {
 	top : -12rem;
 }
 
-
+blockquote {
+	background-color: white !important;
+}
 
 
 .techno-container {
@@ -105,4 +115,17 @@ section.has-dark-background {
 					polygon(30px 0, calc(100% - 30px) 0, 100% 30px, 100% calc(100% - 30px),
 									calc(100% - 30px) 100%,
 									30px 100%, 0 calc(100% - 30px), 0 30px);
+}
+.left-children {
+	position: relative;
+	width: 50%;
+	max-width: 50%;
+	left: 35%;
+}
+.left-children > h4 {
+	text-align: left;
+}
+.icon {
+	margin: 0px !important;
+	padding: 0px 10px 0px 0px  !important;
 }
