Ajout de bindings sur le math-component

--- a/css/theme/myscript.css
+++ b/css/theme/myscript.css
@@ -346,3 +346,14 @@ blockquote {
 .icon {
   margin: 0px !important;
   padding: 0px 10px 0px 0px  !important; }
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 2s linear;
+}
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
+}
